Release Ambercraft 0.2.8